--- a/index.htm
+++ b/index.htm
@@ -2,9 +2,23 @@
 <html lang="ru">
 <head>
 <script src="main.js"> </script>
+	<style>
+		html, body {
+			padding: 0;
+			margin: 0;
+			width: 100%;
+			height: 100%;
+		}
+		
+		div.player1 {
+			width: 100%;
+			height: 75%;
+			border: solid 2px red;
+		}
+	</style>
 </head>
 <body>
-<h1>Yandex maps:increment 1 </h1>
+<h1>Yandex maps:increment 2 </h1>
 </body>
 <div id="player" class="player1"></div>
 </html>
