--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+<script src="https://api-maps.yandex.ru/2.1/?apikey=78c6ac79-fc59-4d4e-8260-aa971a08a1f8&lang=ru-RU"> </script>
 <script src="main.js"> </script>
 	<style>
 		html, body {
@@ -9,16 +10,17 @@
 			width: 100%;
 			height: 100%;
 		}
-		
 		div.player1 {
+			padding: 0;
+			margin: 0;
 			width: 100%;
 			height: 75%;
-			border: solid 2px red;
+			border: solid 4px red;
 		}
 	</style>
 </head>
 <body>
-<h1>Yandex maps:increment 2 </h1>
-</body>
+<h1>Yandex maps:increment 3 </h1>
 <div id="player" class="player1"></div>
+</body>
 </html>
