--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,8 @@
 	</style>
 </head>
 <body>
-<h1>Yandex maps:increment 5 </h1>
+<h1>Yandex maps:increment 6 </h1>
 <div id="player" class="player1"></div>
+<button onClick="onClickNext()">Next </button>
 </body>
 </html>
