--- a/index.htm
+++ b/index.htm
@@ -20,8 +20,9 @@
 	</style>
 </head>
 <body>
-<h1>Yandex maps:increment 6 </h1>
+<h1>Yandex maps:increment 7 </h1>
 <div id="player" class="player1"></div>
 <button onClick="onClickNext()">Next </button>
+<button onClick="onClickBack()">Back </button>
 </body>
 </html>
